--- a/static/site.css
+++ b/static/site.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: blanchedalmond;
-    color: dimgray;
+    color: #60625B;
 }
 
 .category {
@@ -14,4 +14,21 @@ body {
 
 .section:nth-child(even) {
     background-color: lightsteelblue;
+}
+
+.problems:nth-child(even) td {
+    border-bottom: 3px solid dimgrey;
+}
+
+.problems:nth-child(odd) td {
+    border-bottom: 1px solid dimgrey;
+}
+
+.wrapper {
+    margin-right: 60px;
+    margin-left: 60px;
+}
+
+td {
+    padding: 5px;
 }
