--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/site.css"/>
 </head>
 <body>
     <a href="/math-ege">Математика профиль</a>
