--- a/templates/sections.html
+++ b/templates/sections.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/static/site.css"/>
 </head>
 <body>
-    <table class="wrapper">
+    <table>
         {% for category in categories %}
         <tr class="category" >
             <td>
@@ -40,5 +40,6 @@
         {% endfor %}
         {% endfor %}
     </table>
+    <a href="/">К выбору предметов</a>
 </body>
 </html>
